kubia-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-loadbanancer
spec:
  type: LoadBanlancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia
