kubia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
  - host: kubia.example.com
    http:
    - paths: /
      backend:
        serviceName: kubia-nodeport
        servicePort: 80
